--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=academy.spring
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
+spring.datasource.username=postgres
+spring.datasource.password=test
+
+# boilerplate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
+# orm entityleri ile tablolar?m aras?nda uyu?mazl?k kontrolü yapacak.
+spring.jpa.hibernate.ddl-auto=validate
